--- a/assets/css/extra.css
+++ b/assets/css/extra.css
@@ -72,3 +72,76 @@ div {
 .header {
     padding-top: 40px
 }
+
+
+/* modal */
+
+.modal-content {
+    border-radius: 1rem
+}
+
+
+.fa {
+    color: #2b84be;
+    font-size: 90px;
+    padding: 30px 0px
+}
+
+.b1 {
+    background-color: #2b84be;
+    box-shadow: 0px 4px #337095;
+    font-size: 17px
+}
+
+.r3 {
+    color: #c1c1c1;
+    font-weight: 500
+}
+
+a,
+a:hover {
+    text-decoration: none
+}
+
+.container button {
+    height: 50px;
+    width: 150px;
+    background-color: #6C5F5F;
+    border: none;
+    position: relative;
+    overflow: hidden;
+    color: #fff;
+    font-size: 15px;
+    border-radius: 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer
+}
+
+.container button span {
+    z-index: 10
+}
+
+.container button:hover:after {
+    position: absolute;
+    content: '';
+    border-radius: 1px;
+    background-color: blue;
+    height: 400px;
+    width: 400px;
+    top: -12px;
+    left: -19px
+}
+
+.container button:after {
+    position: absolute;
+    content: '';
+    border-radius: 30% 70% 70% 30% / 30% 22% 78% 70%;
+    background-color: blue;
+    height: 70px;
+    width: 80px;
+    top: -12px;
+    left: -13px;
+    transition: all 1s
+}
